fix: kubelka algo getting stuck

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,10 @@ dependencies = [
     "flask>=3.1.1",
     "matplotlib>=3.10.5",
     "numpy>=2.3.2",
+    "pip>=25.2",
+    "pytest>=8.4.1",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
